Breakout game finished

--- a/Videojuegos/Breakout/html/breakout.html
+++ b/Videojuegos/Breakout/html/breakout.html
@@ -9,11 +9,11 @@
 
     <body>
         <div id="headerContainer">
-            <h1>BRAKOUT</h1>
+            <h1>BREAKOUT</h1>
         </div>
         <canvas id="canvas"></canvas>
-        <a href="/">
-            <button id="backButton">Back</button>
+        <a href="breakout.html">
+            <button id="playAgainButton">Play Again</button>
         </a>
         <script> main(); </script>
     </body>
